# Inspection_robot

./: .gitignore  README.md
inspection_robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
inspection_robot_ws/log/: latest_build
inspection_robot_ws/src/inspection_robot_description/: CMakeLists.txt  package.xml
inspection_robot_ws/src/inspection_robot_description/meshes/: Camera_mount.stl  Foot.stl  Lidar_mount.stl  Lower_leg.stl  Upper_leg.stl  base_link.stl
ros2_ws/src/inspection_robot_gazebo/: package.xml  setup.cfg  setup.py
ros2_ws/src/inspection_robot_gazebo/launch/: simulation.launch.py
ros2_ws/src/inspection_robot_gazebo/worlds/: empty.sdf
ros2_ws/src/my_assembly_description/: CMakeLists.txt  package.xml
ros2_ws/src/my_assembly_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch
ros2_ws/src/my_assembly_description/meshes/: Camera_mount.stl  Camera_mount_1.stl  Foot.stl  Foot_1.stl  Foot_2_1.stl  Foot_3_1.stl  Foot_6_1.stl  Lidar_mount.stl  Lidar_mount_1.stl  Lower_leg.stl  Lower_leg_1 (1).stl  Lower_leg_2.stl  Lower_leg_3.stl  Lower_leg_4 (1).stl  Upper_leg.stl  Upper_leg_1 (1).stl  Upper_leg_2.stl  Upper_leg_3 (1).stl  Upper_leg_4 (1).stl  base_link (1).stl
ros2_ws/src/my_assembly_description/urdf/: materials.xacro  my_assembly.gazebo  my_assembly.trans  my_assembly.xacro  test.urdf
