<?xml version="1.0"?>
<package format="3">
  <name>my_assembly_description</name>
  <version>0.0.0</version>
  <description>Quadruped robot description package</description>

  <maintainer email="your_email@example.com">Aleesha</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>